# regulon

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.rst  LICENSE
.github/workflows/: ci_c.yml
docs/deviations/: MISRA_C_deviations.rst
docs/plans/: c11-roadmap.md
docs/plans/c/: c11-phase-3-gain-scheduling.md  c11-phase-4-trajectory-generators.md  c11-phase-6-kalman-filter.md  c11-rollout.md
docs/plans/rust/: rust-first-rollout.md
docs/specs/: IS_ControlLib.rst  SADS_ControlLib.rst  SRS_ControlLib.rst  TP_ControlLib.rst
regulon-c/: AGENTS.md  CMakeLists.txt
regulon-c/cmake/: ron_options.cmake
regulon-c/cmake/freestanding/armv7-none-eabi/include/: math.h
regulon-c/cmake/toolchains/: arm-none-eabi.cmake  armv7-none-eabi-clang.cmake  host-x86_64.cmake  riscv32-unknown-elf.cmake
regulon-c/include/ron/: ron_cascade.h  ron_feedforward.h  ron_filter.h  ron_gain_sched.h  ron_kalman.h  ron_pid.h  ron_pid_types.h  ron_platform.h  ron_trajectory.h
regulon-c/scripts/: verify_pid.ps1
regulon-c/src/: ron_autotune.c  ron_cascade.c  ron_feedforward.c  ron_filter.c  ron_gain_sched.c  ron_health.c  ron_kalman.c  ron_metrics.c  ron_observer.c  ron_pid_api.c  ron_pid_config.c  ron_pid_core.c  ron_pid_fault.c  ron_pid_internal.h  ron_statespace.c  ron_trajectory_scurve.c  ron_trajectory_trap.c
regulon-c/test/: CMakeLists.txt
regulon-c/test/formal/: filter_array_bounds_proof.c  filter_bounded_execution_proof.c  filter_no_heap_proof.c  filter_null_pointer_proof.c  filter_proof_common.h  kalman_no_heap_proof.c  pid_api_validation_proof.c  pid_array_bounds_proof.c  pid_backcalc_proof.c  pid_bounded_step_proof.c  pid_division_guard_proof.c  pid_fault_detection_proof.c  pid_integral_clamp_proof.c  pid_integral_overflow_proof.c  pid_multi_instance_proof.c  pid_nan_inf_proof.c  pid_no_blocking_proof.c  pid_no_global_state_proof.c  pid_no_heap_proof.c  pid_no_recursion_proof.c  pid_null_pointer_proof.c  pid_proof_common.h  pid_saturation_proof.c
regulon-c/test/framework/unity/: unity.c  unity.h  unity_internals.h
regulon-c/test/unit/: test_ron_cascade.c  test_ron_feedforward.c  test_ron_filter.c  test_ron_gain_sched.c  test_ron_kalman.c  test_ron_pid_api.c  test_ron_pid_common.h  test_ron_pid_core.c  test_ron_pid_fault.c  test_ron_pid_types.c  test_ron_trajectory.c
regulon-rs/: AGENTS.md  Cargo.toml
regulon-rs/.cargo/: config.toml
regulon-rs/regulon/: Cargo.toml
regulon-rs/regulon/src/: error.rs  lib.rs  platform.rs
regulon-rs/regulon/src/filter/: mod.rs  tests.rs
regulon-rs/regulon/src/pid/: config.rs  core.rs  mod.rs  proofs.rs  tests.rs  types.rs
